Update to java 11 based setup, and an explicit library dependency